spacing changings to make pages more readable

--- a/index.html
+++ b/index.html
@@ -1656,7 +1656,7 @@ $(document).ready(function () {
 <div id="discovery-and-data-preparation" class="section level3">
 <h3>1. Discovery and Data Preparation</h3>
 <p>The first section of the project covers the data importation and cleaning, analysis, and visualizations to help me understand the data.</p>
-<p><a href="deliverable1.html">Link</a> to phase 1 of the Portfolio.</p>
+<p><a href="deliverable1.nb.html">Link</a> to phase 1 of the Portfolio.</p>
 </div>
 <div id="model-planning-and-building" class="section level3">
 <h3>2. Model Planning and Building</h3>
