fixing link for deliverable3

--- a/index.html
+++ b/index.html
@@ -1654,7 +1654,7 @@ summary {
 <div id="results-and-operationalization" class="section level3">
 <h3>3. Results and Operationalization</h3>
 <p>The last section of the project focuses on revising the previous sections of the project as well as creating some new models. It also sums up the project so far and expains some of the next steps for this project.</p>
-<p><a href="deliverable3.Rmd">Link</a> to phase 3 of the Portfolio.</p>
+<p><a href="deliverable3.html">Link</a> to phase 3 of the Portfolio.</p>
 </div>
 </div>
 
